styles/landing.module.css
/* ... */
.fadeInDown {
  transform: translateY(80px);
  transition: opacity 0.6s ease-out, transform 3s ease-out;
  visibility: hidden;
  will-change: opacity, visibility;
  opacity: 0;
}
.fadeInDown2 {
  transform: translateY(80px);
  transition: opacity 0.6s ease-out, transform 6s ease-out;
  visibility: hidden;
  will-change: opacity, visibility;
  opacity: 0;
}
.isVisible {
  transform: none;
  visibility: visible;
  opacity: 1;
}
.planet {
  animation: float-planet 40s infinite;
}

.car {
  animation: float-car 20s infinite;
}

.people {
  animation: float-people 50s infinite;
}

.moon {
  animation: float-moon 18s infinite;
}

.wrapper {
  font-family: "Oxygen";
  background: #13181e;
  position: relative;
  z-index: 1;
  overflow-x: hidden;
  color: #e2ebf2;
}

.header {
  display: flex;
  padding: 40px 64px;
}

.headerLogo {
  background: url("/logo-white.svg") no-repeat;
  background-position: 50%;
  background-size: 160px;
  width: 160px;
  height: 60px;
  margin-right: 20px;
}

.headerMenu {
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  height: 40px;
}

.headerLinks a {
  color: white;
  padding: 16px;
  display: inline-block;
  font-family: Oxygen;
}

.headerMenuIcon {
  float: right;
  position: absolute;
  top: 44px;
  right: 44px;
  display: none;
}

.vl {
  margin-top: 10px;
  opacity: 0.3;
  border-left: 1px solid #e5e5e5;
  height: 20px;
}

.section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.heroSection {
  min-height: 800px;
  position: relative;
  z-index: 2;
  margin-bottom: 120px;
}

.topHeading {
  font-weight: 700;
  font-size: 22px;
  line-height: 150%;
  color: #66ce67;
  margin-bottom: 20px;
}

.row {
  max-width: 900px;
  text-align: center;
  margin-bottom: 20px;
}

.rowLeftAligned {
  width: 950px;
  text-align: left;
  align-items: center;
  position: relative;
  z-index: 1;
}

.h1 {
  font-size: 56px;
  line-height: 1.142em;
  font-weight: 700;
  color: #ffffff;
}

.h3 {
  font-size: 48px;
  line-height: 1.142em;
  font-weight: 700;
  color: #ffffff;
}

.b16 {
  font-size: 16px;
  line-height: 150%;
  margin: 0px auto;
  width:606px;
}

.b18 {
  font-size: 18px;
  line-height: 1.5em;
  font-weight: 700;
}

.l12 {
  font-size: 12px;
  line-height: 1.5em;
  text-transform: uppercase;
  color: #883be6;
}

.byline {
  margin-top: 34px;
  margin-bottom: 80px;
  font-size: 22px;
  line-height: 150%;
  font-weight: 400;
  max-width: 696px;
  position: relative;
  z-index: 1;
  color: #ffffff;
}

.primaryCTA {
  width: 430px;
  display: flex;
  justify-content: center;
  text-align: center;
}

.secondaryCTA {
  background: #883be6;
  width: 188px;
  height: 40px;
  font-weight: 700;
}

.hlHorizontal {
  position: relative;
}

.hlHorizontal:after {
  content: "";
  position: absolute;
  bottom: -33px;
  left: calc(50% - 52px);
  width: 104px;
  border-bottom: 2px solid #66ce67;
}

.hlVertical {
  display: flex;
  text-align: left;
  align-items: center;
}

.hlVertical:before {
  content: "";
  height: 40px;
  border-left: 2px solid #66ce67;
  margin-right: 16px;
}

.leftAligned {
  text-align: left;
  align-items: flex-start;
}

.circleSection {
  min-height: 620px;
  position: relative;
  z-index: 1;
}

.circleSectionEllipse {
  top: -10vw;
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 45vw;
}

.circleSectionDesc {
  margin-top: 96px;
}

.circleSectionLink {
  font-size: 12px;
  line-height: 150%;
  margin-top: 36px;
  font-weight: 700;
  text-transform: uppercase;
}

.circleSectionLink a {
  color: #66ce67;
}

.platformCirclesWrapper {
  position: relative;
  z-index: -1;
  pointer-events: none;
  height: 0;
  transform-origin: 0 0;
  white-space: nowrap;
}
.platformCircles {
  transition: transform 0.1s linear;
  will-change: transform;
  display: inline;
}

.collaborationBenefitsSection {
  margin-top: 170px;
  margin-bottom: 160px;
}

.collaborationsBenefitsCard1 {
  margin-top: 30px;
  margin-right: 80px;
}

.collaborationsBenefitsCard1Title {
  font-weight: 700;
  font-size: 48px;
  line-height: 100.27%;
  letter-spacing: -0.02em;
  color: #ffffff;
  width: 327px;
}

.benefitsCard1Title {
  font-weight: 700;
  font-size: 32px;
  line-height: 113.27%;
  letter-spacing: -0.02em;
  color: #ffffff;
  width: 278px;
}

.collaborationsBenefitsCard1Body {
  font-weight: 400;
  font-size: 16px;
  line-height: 150%;
  color: #ffffff;
  width: 418px;
  margin-top: 25px;
  margin-bottom: 35px;
  opacity: 0.9;
}

.collaborationsBenefitsCard1Button {
  margin-top: 80px;
  width: 318px;
  display: flex;
  justify-content: left;
  text-align: center;
}

.collaborationsBenefitsCard2Title {
  font-weight: 700;
  font-size: 32px;
  line-height: 100.27%;
  letter-spacing: -0.02em;
  color: #ffffff;
  margin-top: 30px;
}

.collaborationsBenefitsCard2Body {
  margin-top: 8px;
  font-weight: 400;
  font-size: 14px;
  line-height: 139%;
  color: #ffffff;
  opacity: 0.9;
  width: 215px;
}

.storageSection {
  min-height: 800px;
}

.storageAnim {
  display: flex;
  width: 100%;
  margin-top: 100px;
  justify-content: center;
}

.storageAnimSource {
  width: 400px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  mask-image: linear-gradient(
    to left,
    rgba(0, 0, 0, 1) 50%,
    rgba(0, 0, 0, 0) 100%
  );
  border-right: 2px solid #613ac2;
}

.storageCircle {
  width: 72px;
  height: 72px;
  border-radius: 50%;
  border: 2px solid #37264c;
  background: #13181e;
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  left: 0;
}
.storageCircleContent1 {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background: #ffab2e;
}
.storageCircleContent2 {
  width: 12px;
  height: 12px;
  background: #883be6;
}
.storageCircleContent3 {
  width: 0px;
  height: 0px;
  border: 8px solid transparent;
  border-top: 12px solid #66ce67;
  margin-top: 12px;
}
/* ... */

